# fast_jwt

./: LICENSE  README.md  pyproject.toml
src/fast_jwt/: __init__.py
src/fast_jwt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_auth.py
